--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,11 +8,12 @@
     <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
     <!-- Main Source Files -->
     <link rel="stylesheet" href="main.css" />
-    <script src="main.js"></script>
-    <!-- <script src="assets/js/tailwindcss_3.4.5.js"></script> -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="/wails/runtime.js"></script>
-    <script src="assets/js/echarts.min.js"></script>
+    <link rel="stylesheet" href="./tailwind.css">
+
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <script src="./main.js"></script>
+    <script src="./wails/runtime.js"></script>
+    <script src="./echarts.min.js"></script>
     <script>
         let lossStatsSwitch = 3;
 
