--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -26,11 +26,11 @@
   </script>
 </head>
 
-<body class="body">
-  <div class="side-bar">
+<body id="body">
+  <div id="side-bar">
 
-    <div class="games">
-      <div class="games-list">
+    <div id="games">
+      <div id="games-list">
 
         <div class="games-item">
           <img class="games-item-icon" src="./assets/images/images/pubg-icon.png" />
@@ -47,30 +47,30 @@
 
       </div>
 
-      <div class="games-add">
-        <div onclick="console.log(123)" class="games-add-item">&nbsp;&nbsp;&nbsp;＋&nbsp;添加游戏 </div>
+      <div id="games-add">
+        <div onclick="console.log(123)" id="games-add-item">&nbsp;&nbsp;&nbsp;＋&nbsp;添加游戏 </div>
       </div>
     </div>
 
-    <div class="user-info">
-      <img class="user-info-icon" src="./assets/images/logo-universal.png">
-      <div class="user-info-detail">
-        <div class="user-info-nickname">test</div>
-        <div class="user-info-subscribe">
+    <div id="user-info">
+      <img id="user-info-icon" src="./assets/images/logo-universal.png">
+      <div id="user-info-detail">
+        <div id="user-info-nickname">test</div>
+        <div id="user-info-subscribe">
           <p>到期:&nbsp;&nbsp;</p>
-          <p id="subscribe">2024年12月26日</p>
+          <p id="user-info-subscribe-date">2024年12月26日</p>
         </div>
       </div>
     </div>
 
   </div>
 
-  <div class="main-body">
+  <div id="main-body">
 
     <!-- 搜索游戏并添加 -->
-    <div class="search-game">
-      <input class="search-game-input" placeholder="搜索游戏关键字">
-      <div class="search-game-grid">
+    <div id="search-game">
+      <input id="search-game-input" placeholder="搜索游戏关键字">
+      <div id="search-game-grid">
 
         <div class="search-game-grid-item">
           <img class="search-game-grid-item-ad" src="assets/images/images/pubg-ad.png">
@@ -84,13 +84,13 @@
     </div>
 
     <!-- 游戏详情页 -->
-    <div class="game-detail">
-      <img class="game-detail-bg" src="assets/images/images/dnf-bg.jpg"></img>
-      <div class="game-detail-body">
+    <div id="game-detail">
+      <img id="game-detail-bg" src="assets/images/images/dnf-bg.jpg"></img>
+      <div id="game-detail-body">
 
-        <div class="game-detail-body-title">
-          <div class="game-detail-body-title-name">战争雷霆 (国际服)</div>
-          <div class="game-detail-body-title-info">
+        <div id="game-detail-body-title">
+          <div id="game-detail-body-title-name">战争雷霆 (国际服)</div>
+          <div id="game-detail-body-title-info">
             最近加速:&nbsp;
             <div id="game-detail-body-title-info-recent">
               2024年8月26日 15:38:11
@@ -103,17 +103,17 @@
           </div>
         </div>
 
-        <div class="game-detail-body-acc">
-          <div class="game-detail-body-acc-setting">
+        <div id="game-detail-body-acc">
+          <div id="game-detail-body-acc-setting">
 
-            <select class="game-detail-body-acc-setting-zone">
+            <select id="game-detail-body-acc-setting-zone">
               <option value="option3">北美服</option>
               <option value="option1">亚服</option>
               <option value="option2">俄服</option>
             </select>
 
 
-            <ul class="game-detail-body-acc-setting-route">
+            <ul id="game-detail-body-acc-setting-route">
               <script type="text/javascript">
                 var routeMode = 'auto';
                 function updateRouteMode(id) {
@@ -134,37 +134,37 @@
             </ul>
           </div>
 
-          <div class="game-detail-body-acc-start">
-            <img src="assets/images/accelerate.png" class="game-detail-body-acc-start-icon">
-            <div class="game-detail-body-acc-start-text">加速游戏</div>
+          <div id="game-detail-body-acc-start">
+            <img src="assets/images/accelerate.png" id="game-detail-body-acc-start-icon">
+            <div id="game-detail-body-acc-start-text">加速游戏</div>
           </div>
         </div>
       </div>
     </div>
 
     <!-- 加速中 -->
-    <div class="accelerate">
+    <div id="accelerate">
 
-      <div class="accelerate-detail">
-        <img class="accelerate-detail-img" src="assets/images/images/pubg-ad.png">
+      <div id="accelerate-detail">
+        <img id="accelerate-detail-img" src="assets/images/images/pubg-ad.png">
 
-        <div class="accelerate-detail-base">
-          <div class="accelerate-detail-base-info">
-            <div class="accelerate-detail-base-info-title">
-              <div class="accelerate-detail-base-info-title-name">战争雷霆(国际服)</div>
+        <div id="accelerate-detail-base">
+          <div id="accelerate-detail-base-info">
+            <div id="accelerate-detail-base-info-title">
+              <div id="accelerate-detail-base-info-title-name">战争雷霆(国际服)</div>
 
-              <div class="accelerate-detail-base-info-title-stats">
+              <div id="accelerate-detail-base-info-title-stats">
                 加速时长:&nbsp;
-                <div class="accelerate-detail-base-info-title-stats-duration">00:46:54</div>
+                <div id="accelerate-detail-base-info-title-stats-duration">00:46:54</div>
                 &nbsp;&nbsp;&nbsp;&nbsp;加速流量:&nbsp;
-                <div class="accelerate-detail-base-info-title-stats-bytes">99.0KB</div>
+                <div id="accelerate-detail-base-info-title-stats-bytes">99.0KB</div>
               </div>
             </div>
 
-            <div class="accelerate-detail-base-info-stop">停止加速</div>
+            <div id="accelerate-detail-base-info-stop">停止加速</div>
           </div>
 
-          <div class="accelerate-detail-base-route">
+          <div id="accelerate-detail-base-route">
 
             <svg t="1724786337168" class="accelerate-detail-base-route-icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="18463" width="48" height="48">
               <path d="M306.688 624a93.312 93.312 0 1 1 0 186.666667 93.312 93.312 0 0 1 0-186.666667z m0 42.666667a50.688 50.688 0 1 0 0 101.333333 50.688 50.688 0 0 0 0-101.333333zM381.354667 288a93.354667 93.354667 0 1 1 0 186.666667 93.354667 93.354667 0 0 1 0-186.666667z m0 42.666667a50.688 50.688 0 1 0 0 101.333333 50.688 50.688 0 0 0 0-101.333333zM642.688 549.333333a93.312 93.312 0 1 1 0 186.666667 93.312 93.312 0 0 1 0-186.666667z m0 42.666667a50.688 50.688 0 1 0 0 101.333333 50.688 50.688 0 0 0 0-101.333333zM717.354667 213.333333a93.312 93.312 0 1 1 0 186.666667 93.312 93.312 0 0 1 0-186.666667z m0 42.666667a50.688 50.688 0 1 0 0 101.333333 50.688 50.688 0 0 0 0-101.333333z" p-id="18464"></path>
